[package]
name = "things3-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
dirs = "4.0.0"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
sentry = "0.31.5"
serde = { version = "1.0.152", features = ["derive"] }
things3 = "0.0.3"
toml = "0.5.10"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
